--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.0.1"
 edition = "2024"
 
 [dependencies]
+clap = "4.5.53"
 miette = { version = "7.6.0", features = ["fancy"] }
 thiserror = "2.0.17"
