--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 clap = "4.5.53"
+libc = "0.2.178"
 miette = { version = "7.6.0", features = ["fancy"] }
 thiserror = "2.0.17"
